--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,21 @@
   pointer-events: none;
 }
 
+.css-10d9dml-MuiTabs-indicator {
+  position: absolute;
+  height: 100%;
+  bottom: 0;
+  width: 2px;
+  -webkit-transition: all 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+  transition: all 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+  background-color: red !important;
+  right: 0;
+}
+
+.css-1h9z7r5-MuiButtonBase-root-MuiTab-root.Mui-selected {
+  color: red !important;
+}
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
