--- a/src/App.css
+++ b/src/App.css
@@ -8,18 +8,21 @@
 }
 
 .css-10d9dml-MuiTabs-indicator {
-  position: absolute;
-  height: 100%;
-  bottom: 0;
-  width: 2px;
-  -webkit-transition: all 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
-  transition: all 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
-  background-color: red !important;
-  right: 0;
+  background-color: #8c52ff !important;
+ 
+}
+
+.loginbutton:hover{
+background-color: #8c52ff !important;
+scale: 0.9;
 }
 
 .css-1h9z7r5-MuiButtonBase-root-MuiTab-root.Mui-selected {
-  color: red !important;
+  color: #8c52ff !important;
+}
+
+.css-hip9hq-MuiPaper-root-MuiAppBar-root {
+  background-color: black !important;
 }
 
 @media (prefers-reduced-motion: no-preference) {
